tests/errors/sem_assignment_str.kt
fun main() {
val name: String = "Alice"
val age: Int = name
}
